--- a/project2.ipynb
+++ b/project2.ipynb
@@ -82,7 +82,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Analysis done\n"
+      "Data saved to output.xlsx\n"
      ]
     }
    ],
