--- a/project2.ipynb
+++ b/project2.ipynb
@@ -58,7 +58,7 @@
     "    \n",
     "    df.to_excel('output.xlsx')\n",
     "    \n",
-    "    print('Analysis done')"
+    "    print('Data saved to output.xlsx')"
    ]
   },
   {
